--- a/templates/index.html
+++ b/templates/index.html
@@ -37,13 +37,13 @@
 					<div id="banner" class="container">
 						<section>
 							<p>This is a<strong> Sentiment Analysis</strong> system</p>
-							<a href="comment.html" class="button medium">Try a Comment</a>
+							<a href="/comment" class="button medium"><input type="button" value="call_flask_funtion">Try a Comment</a>
 						</section>
 						<section>
-							<a action="{{ url_for('Predict_African_Stories')}}" class="button medium">News From Africa</a>
+							<a href="/Predict_African_Stories" class="button medium"><input type="button" value="call_flask_funtion">News From Africa</a>
 						</section>
 						<section>							
-							<a action="{{ url_for('predict_World_News')}}" class="button medium">News From Rest of World</a>
+							<a href="/Predict_World_Stories" class="button medium"><input type="button" value="call_flask_funtion">News From Rest of World</a>
 						</section>
 					</div>
 					<!-- Copyright -->
