--- a/templates/comment.html
+++ b/templates/comment.html
@@ -10,18 +10,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script type="text/javascript" src="{{ url_for('static', filename='css/ie/html5shiv.js')}}"></script><![endif]-->
-		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js')}}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.dropotron.min.js')}}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/skel.min.js')}}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/skel-layers.min.js')}}"></script>
-		<script type="text/javascript" src="{{ url_for('static', filename='js/init.js')}}"></script>
-		<noscript>
-			<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/skel.css')}}"/>
-			<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}" />
-			<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style-wide.css')}}" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/ie/v8.css')}}" /><![endif]-->
+         	<link rel="stylesheet" href="{{ url_for('static', filename='css/skel.css')}}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/style-wide.css')}}">
 	</head>
 	<body>
 
