--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
 				<!-- Header -->
 					<div id="header" class="skel-panels-fixed">
 						<div id="logo">
-							<h1><a href="index.html">EmotioNews</a></h1>
-							<span class="tag">by Libazisa Kunda</span>
+							<h1><a href="/">EmotioNews</a>by Libazisa Kunda</h1>
+							<span class="tag"></span>
 					<!-- Banner -->
 					<div id="banner" class="container">
 						<section>
@@ -41,7 +41,8 @@
 		<div id="copyright">
 			<div class="container">
 				<div class="copyright">
-					<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
+					<p>Template:<a href="http://templated.co">TEMPLATED</a>Final Design by L.Kunda</a></p>
+					<p>Done in Completion of EEE 5014 Final Year Project at the University of Zambia</p>
 				</div>
 			</div>
 		</div>
