--- a/templates/comment.html
+++ b/templates/comment.html
@@ -37,7 +37,7 @@
 						<section>
 							<header class="major">
 								<h2>Test the Emotion of a Comment</h2>
-								<form action="//predict_comment" method="POST">
+								<form action="/predict_comment" method="POST">
 		                                                <textarea name="message" rows="6" cols="50"></textarea>
                                                                 <br/>
                                                                 <input type="submit" class="btn-info" value="predict">
