--- a/templates/comment.html
+++ b/templates/comment.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>No Sidebar - Phase Shift by TEMPLATED</title>
+		<title>EmotioNews EEE 5014 2019</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
