--- a/templates/comment.html
+++ b/templates/comment.html
@@ -33,7 +33,7 @@
 				<!-- Header -->
 
 				<!-- Page -->
-					<div id="page" class="container">
+					<div class="wrapper style1">
 						<section>
 							<header class="major">
 								<h2>Test the Emotion of a Comment</h2>
