--- a/templates/comment.html
+++ b/templates/comment.html
@@ -33,17 +33,15 @@
 				<!-- Header -->
 
 				<!-- Page -->
-					<div class="wrapper style1">
-						<section>
-							<header class="major">
+					<div id="banner" class="container">
+								<header class="major">
 								<h2>Test the Emotion of a Comment</h2>
 								<form action="/predict_comment" method="POST">
 		                                                <textarea name="message" rows="6" cols="50"></textarea>
                                                                 <br/>
                                                                 <input type="submit" class="btn-info" value="predict">
                                                                 </form>
-                                                 </section>
-					</div>
+                                         </div>
 				<!-- /Page -->
 
 				<!-- Copyright -->
